[package]
name = "cortex-tensor"
version = "0.1.0"
edition = "2024"
description = "Pure-Rust tensor, transformer, and MoE building blocks. Zero GPU/CUDA/Julia dependencies."
authors = ["Raul Mc"]
license = "GPL-3.0"

[lib]
name = "cortex_tensor"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.8"
rayon = "1.7"
memmap2 = "0.9"
half = "2"

[profile.release]
opt-level = 3
lto = "fat"

[workspace]
# Standalone: detach from any parent Cargo workspace.
